--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -7,7 +7,8 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: flex-start;
+        justify-content: center;
+        align-items: center;
     }
 
     .header {
@@ -16,15 +17,28 @@
         align-items: center;
         width: 100%;
         background-color: #6096ba;
-        padding: 10px 0;
+        padding: 10px 20px;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     }
-   
+    .logo img {
+        max-width: 200px;
+    }
     .menu {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        gap: 20px;
-        padding: 0 20px;
+        display:flex;
+        gap: 10px;
+    }
+    .menu button {
+        background-color: #274c77;
+        border: none;
+        border-radius: 5px;
+        padding: 8px 8px;
+        font-size: 12px;
+        color: white;
+        cursor: pointer;
+        transition: background-color 0.3s, transform 0.2s;
+    }
+    h2 {
+        text-align: center;
     }
     
     a {
@@ -38,27 +52,57 @@
         flex-grow: 1;
         text-align: center;
     }
-    .herodiv {
-        margin: 10px auto;
-        position: relative;
-        text-align: center; 
-    }
-    
-    .herodiv img {
-        object-fit: cover;
-        text-align: center;
-    }
-    
-    .stats {
-        position: absolute;
-        bottom: 20px;
-        left: 15px;
-        background: radial-gradient(#eee, #113faa);
-        border: 1px solid #000;
-        padding: 0.65rem;
-        box-shadow: 0 0 30px #111;
-        opacity: 0.9;
+    .container {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+        max-width: 1200px;
+        background-color: white;
+        padding: 20px;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        border-radius: 8px;
     }   
+    .text {
+        flex: 1;
+        margin-right: 20px;
+        text-align: left;
+        font-size: 1.2em;
+        color: #333;
+    }
+    .button {
+        flex: 1;
+        margin-right: 20px;
+        text-align: left;
+        font-size: 1.2em;
+        color: #333;
+    }
+    .text-left, .text-right {
+        flex: 1;
+        font-size: 1.2em;
+        color: #333;
+        padding: 0 10px;
+    }
+    .text-left {
+        text-align: left;
+    }
+    .text-right {
+        text-align: right;
+    }
+    .image {
+        width: 300px;
+        height: auto;
+        border-radius: 8px;
+        object-fit: cover;
+    }
+    .adventure{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+    }
+    .rapids{
+        height: 150px;
+    }
     footer {
         display: flex;
         justify-content: space-between;
