--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -23,20 +23,34 @@
     .logo img {
         max-width: 200px;
     }
-    .menu {
-        display:flex;
-        gap: 10px;
-    }
-    .menu button {
+    nav .menu {
         background-color: #274c77;
-        border: none;
-        border-radius: 5px;
-        padding: 8px 8px;
-        font-size: 12px;
+        padding: 10px;
+      }
+      
+      nav .menu ul {
+        list-style: none;
+        margin: 0;
+        padding: 0;
+        display: flex;
+        justify-content: space-around;
+      }
+      
+      nav .menu ul li {
+        margin: 0 15px;
+      }
+      
+      nav .menu ul li a {
         color: white;
-        cursor: pointer;
-        transition: background-color 0.3s, transform 0.2s;
-    }
+        text-decoration: none;
+        font-weight: bold;
+        font-size: 1.2em;
+      }
+      
+      nav .menu ul li a:hover {
+        text-decoration: underline;
+      }
+      
     h2 {
         text-align: center;
     }
