--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -11,3 +11,93 @@
     color: #666;
 }
 
+.title-caveat {
+    font-family: "caveat", cursive;
+    font-size: 2.5em;
+    color: #666;
+}
+.employee1 {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    max-width: 1200px;
+    background-color: white;
+    padding: 20px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+    margin-bottom: 40px;
+}
+.employee img {
+    max-width: 100%;
+    height: auto;
+}
+.contact {
+    display: grid;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    max-width: 1200px;
+    background-color: white;
+    padding: 20px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+    margin-bottom: 40px;
+}   
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+form {
+    width: 650px;
+    margin: 40px auto;
+    padding: 1rem;
+    border: 1px solid(0 0 0 / 0.1);
+    border-radius: 0.5rem;
+    background-color: #fff;
+    display: grid;
+    grid-gap: 1rem;
+}
+fieldset {
+    display:grid;
+    grid-gap: .5rem;
+    margin: 20px 0;
+    border: 1px solid rgb(0 0 0 / 0.2);
+    padding: 1rem;
+}
+legend {
+    padding: 0.5rem;
+    color: navy;
+    font-size: 1.3rem;
+}
+label, input, button, radio, textarea {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+label {
+    text-align: right;
+    padding-right: 1rem;
+}
+input, radio, textarea {
+    padding: 0.5rem;
+    font-size: 1.1rem;
+}
+input[type="checkbox"] {
+    width: 22px;
+    height: 22px;
+    vertical-align: bottom;
+}
+button {
+    margin: 1rem;
+    background-color: navy;
+    color: #fff;
+    border: none;
+    border-radius: .5rem;
+    padding: .75rem;
+    font-size: 1.2rem;
+}
+button:hover {
+    background-color: darkgreen;
+}
+
