--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -9,6 +9,7 @@
         align-items: center;
         justify-content: center;
         align-items: center;
+        background-color: #6096ba;
     }
 
     .header {
