--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -18,7 +18,7 @@
 }
 .employee1 {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     width: 100%;
     max-width: 1200px;
@@ -54,7 +54,7 @@ form {
     width: 650px;
     margin: 40px auto;
     padding: 1rem;
-    border: 1px solid(0 0 0 / 0.1);
+    border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 0.5rem;
     background-color: #fff;
     display: grid;
@@ -99,5 +99,11 @@ button {
 }
 button:hover {
     background-color: darkgreen;
+}
+.google-map {
+    border: none;
+    width: 100%;
+    max-width: 600px;
+    height: 450px;
 }
 
