--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -118,7 +118,7 @@ button:hover {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    color: white;
+    color: #274c77;
     text-align: center;
 }
 .hero-content {
